--- a/microscope/client/main.html
+++ b/microscope/client/main.html
@@ -1,14 +1,9 @@
 <head>
     <title>Microscope</title>
 </head>
-
 <body>
   <div class="container">
-    <header class="navbar">
-        <div class="navbar-inner">
-            <a class="brand" href="{{postsListPath}}">Microscope</a>
-        </div>
-    </header>
+    {{> header}}
     <div id="main" class="row-fluid">
       {{renderPage}}
     </div>
